<resources>
    <string name="app_namee">apk_registrasi</string>
    <string name="download">Download</string>
    <string name="data">Data Kelompok</string>
    <string name="upload">Upload</string>

    <!--BUTTOM NAVIGATION-->
    <string name="title_activity_button_nav">button_nav</string>
    <string name="title_data">Data</string>
    <string name="title_download">Download</string>
    <string name="title_upload">Upload</string>
    <string name="title_logout">Logout</string>


    <!--    Nama Kolom Registrasi-->
    <string name="universitas">Universitas </string>
    <string name="fakultas">Fakultas </string>
    <string name="prodi">Prodi </string>
    <string name="alamat">Alamat Universitas </string>
    <string name="jumlah">Jumlah Anggota </string>
    <string name="kel">Kelompok</string>
    <string name="periodM">Periode Mulai</string>
    <string name="periodA">Periode Akhir</string>
    <string name="ketua">Nama Ketua Kelompok</string>
    <string name="email">Email</string>

    <!--    Data Anggota-->
    <string name="nama">Nama</string>
    <string name="NIM">NIM</string>
    <string name="jk">Jenis Kelamin</string>
    <string name="no">No Telp</string>
    <string name="emailA">Email</string>
    <string name="sosmed">Sosial Media</string>
    <string name="alamatA">Alamat</string>

    <!--SPINNER-->
    <string-array name="JenisKelamin">
        <item> - </item>
        <item>Laki-laki</item>
        <item>Perempuan</item>
    </string-array>

    <!--SPINNER KEAHLIAN-->
    <string-array name="keahlian">
        <item> - </item>
        <item>UI/UX</item>
        <item>Android Developer</item>
        <item>Web Progaming</item>
        <item>Frontend</item>
        <item>Database</item>
    </string-array>

    <string-array name="kelompok">
        <item> - </item>
        <item>Kelompok 1</item>
        <item>Kelompok 2</item>
        <item>Kelompok 3</item>
        <item>Kelompok 4</item>
        <item>Kelompok 5</item>
    </string-array>
</resources>