<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Data_anggota">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/kode">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/putih">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="2">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/kode"
                    android:gravity="center"
                    android:orientation="vertical">
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/judul"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="5dp"
                android:text="DETAIL ANGGOTA KELOMPOK"
                android:textColor="@color/kode"
                android:textSize="21sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="397dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/judul"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="0dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="8dp"
                    app:cardPreventCornerOverlap="false"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/nama"
                            android:textColor="@color/colorText"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/NIM"
                            android:textColor="@color/colorText"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/jk"
                            android:textColor="@color/colorText"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/no"
                            android:textColor="@color/colorText"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/emailA"
                            android:textColor="@color/colorText"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/sosmed"
                            android:textColor="@color/colorText"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/alamatA"
                            android:textColor="@color/colorText"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="200dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="5dp"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/btnEdit"
                                android:layout_width="68dp"
                                android:layout_height="42dp"
                                android:layout_marginRight="15dp"
                                android:layout_marginBottom="40dp"
                                android:background="@drawable/button_edit"
                                android:text="Edit"
                                android:textSize="15sp"
                                android:textAllCaps="false"
                                android:textColor="#04A80B"/>
                            <Button
                                android:id="@+id/btnHapus"
                                android:layout_width="68dp"
                                android:layout_height="42dp"
                                android:layout_marginLeft="5dp"
                                android:layout_marginBottom="40dp"
                                android:layout_weight="0"
                                android:background="@drawable/button_hapus"
                                android:text="Hapus"
                                android:textSize="15sp"
                                android:textAllCaps="false"
                                android:textColor="#FF1B0A"/>
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>