<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kode"
    tools:context=".Regist_kel">

    <TextView
        android:id="@+id/judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="REGISTRASI"
        android:textColor="@color/kode"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="400dp"
        android:layout_height="661dp"
        android:layout_marginTop="48dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="387dp"
            android:layout_height="662dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="247dp"
                android:layout_height="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/nama"
                android:textColor="@color/colorText"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText"
                style="@style/styleEditText"
                android:layout_width="365dp"
                android:layout_height="38dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/button1"
                android:hint="Masukkan Nama Anggota"
                android:paddingLeft="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.21"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="247dp"
                android:layout_height="20dp"
                android:layout_marginTop="4dp"
                android:text="@string/NIM"
                android:textColor="@color/colorText"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.092"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText" />

            <EditText
                android:id="@+id/editText10"
                style="@style/styleEditText"
                android:layout_width="365dp"
                android:layout_height="38dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/button1"
                android:hint="Masukkan NIM"
                android:paddingLeft="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.197"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="247dp"
                android:layout_height="20dp"
                android:layout_marginTop="4dp"
                android:text="@string/no"
                android:textColor="@color/colorText"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.082"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText10" />

            <EditText
                android:id="@+id/editText9"
                style="@style/styleEditText"
                android:layout_width="365dp"
                android:layout_height="38dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/button1"
                android:hint="Masukkan No.Telp / HP"
                android:paddingLeft="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.197"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="261dp"
                android:layout_height="18dp"
                android:layout_marginTop="4dp"
                android:text="@string/emailA"
                android:textColor="@color/colorText"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.088"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText9" />

            <EditText
                android:id="@+id/editText7"
                style="@style/styleEditText"
                android:layout_width="365dp"
                android:layout_height="38dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/button1"
                android:hint="Masukkan Email"
                android:paddingLeft="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.197"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="285dp"
                android:layout_height="19dp"
                android:layout_marginTop="4dp"
                android:text="@string/sosmed"
                android:textColor="@color/colorText"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.102"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText7" />

            <EditText
                android:id="@+id/editText4"
                style="@style/styleEditText"
                android:layout_width="365dp"
                android:layout_height="38dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/button1"
                android:hint="Sosial Media"
                android:paddingLeft="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.197"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="268dp"
                android:layout_height="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/alamatA"
                android:textColor="@color/colorText"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.093"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText4"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/editText3"
                style="@style/styleEditText"
                android:layout_width="365dp"
                android:layout_height="38dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/button1"
                android:hint="Masukkan Alamat Lengkap"
                android:paddingLeft="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.197"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView14" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Periode Magang"
                android:textColor="@color/colorText"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.048"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText3" />

            <TextView
                android:id="@+id/txtPeriodM"
                style="@style/styleEditText"
                android:layout_width="148dp"
                android:layout_height="37dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/button1"
                android:hint="@string/periodM"
                android:paddingLeft="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.012"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                style="@style/styleTglText"
                android:layout_width="30dp"
                android:layout_height="38dp"
                android:layout_marginTop="22dp"
                android:paddingLeft="12dp"
                android:text="-"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/txtPerioA"
                app:layout_constraintHorizontal_bias="0.413"
                app:layout_constraintStart_toEndOf="@+id/txtPeriodM"
                app:layout_constraintTop_toTopOf="@+id/textView5" />

            <TextView
                android:id="@+id/txtPerioA"
                style="@style/styleEditText"
                android:layout_width="149dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/button1"
                android:hint="@string/periodA"
                android:paddingLeft="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.931"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Periode Magang"
                android:textColor="@color/colorText"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.048"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText3" />

            <EditText
                android:id="@+id/editText8"
                style="@style/styleEditText"
                android:layout_width="365dp"
                android:layout_height="38dp"
                android:layout_marginTop="135dp"
                android:background="@drawable/button1"
                android:hint="Masukkan Alamat Lengkap"
                android:paddingLeft="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.197"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView14" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="69dp"
                android:text="Nama"
                android:textColor="@color/colorText"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.039"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText3" />

            <Button
                android:id="@+id/btnTambah"
                android:layout_width="420dp"
                android:layout_height="35dp"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:background="@drawable/button2"
                android:text="Tambah Anggota Kelompok"
                android:textAllCaps="false"
                android:textColor="@color/kode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.515"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText8" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>